styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

html {
  scroll-behavior: smooth;
}

body {
  padding: 0;
  margin: 0;
  font-family: system-ui, 'SF Pro Display', BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
}

a {
  color: inherit;
  text-decoration: none;
}

* {
  box-sizing: border-box;
}

.darkmode-ignore {
  display: block!important;
}

.darkmode-toggle {
  z-index: 10;
}

.github-octo-flat-ui {
  height: 35vh!important;
}

.DocSearch-Button {
  position: fixed;
  bottom: 100px;
  left: 45%;
  opacity: 25%;
}
.DocSearch-Button:hover {
  opacity: 100%;
  transition: opacity 0.2s ease-in-out;
}

.darkmode--activated .DocSearch-Button {
  filter: contrast(90%) invert(60%) hue-rotate(180deg) !important;
  -ms-filter: invert(100%);
  -webkit-filter: contrast(90%) invert(90%) hue-rotate(180deg) !important;
  text-rendering: optimizeSpeed;
  image-rendering: optimizeSpeed;
  -webkit-font-smoothing: antialiased;
  -webkit-image-rendering: optimizeSpeed;
}

.darkmode--activated .DocSearch-Modal {
  filter: contrast(90%) invert(90%) hue-rotate(180deg) !important;
  -ms-filter: invert(100%);
  -webkit-filter: contrast(90%) invert(90%) hue-rotate(180deg) !important;
  text-rendering: optimizeSpeed;
  image-rendering: optimizeSpeed;
  -webkit-font-smoothing: antialiased;
  -webkit-image-rendering: optimizeSpeed;
}

.darkmode--activated .backlight {
  ---backlight: 0 0 0 1px #58fecf1a, -10px 0 25px -10px #0011fe85, 0 0 25px -10px #e4062f9b, 10px 0 25px -10px #0f3de5bb;
  color: var(--colors-hiContrast);
  box-shadow: var(---backlight);
}

